Remove forbiddenAPI
Signed-off-by: Ryan Bogan <rbogan@amazon.com>